update swagger docs and skill file to reflect new L402 paradigm
